# python-template

./: .gitignore  .pre-commit-config.yaml  .testmondata  CHANGELOG.md  README.md  pyproject.toml
.github/actions/install/: action.yml
.github/workflows/: CI.yml
src/python-template/: __main__.py  constants.py  custom_types.py  main.py
src/python-template/time/: submodule.py
